WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282086
[WebGPU] External textures in compute passes don't cache their command encoders
https://bugs.webkit.org/show_bug.cgi?id=282086
Summary
[WebGPU] External textures in compute passes don't cache their command encoders
Mike Wyrzykowski
Reported
2024-10-25 00:13:32 PDT
[WebGPU] External textures in compute passes don't cache their command encoders
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-10-25 00:13:53 PDT
radar://138504987
Mike Wyrzykowski
Comment 2
2024-10-25 00:18:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35712
EWS
Comment 3
2024-10-31 07:27:36 PDT
Committed
285954@main
(2b35ff32741e): <
https://commits.webkit.org/285954@main
> Reviewed commits have been landed. Closing PR #35712 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug