[WebGPU] External textures in compute passes don't cache their command encoders https://bugs.webkit.org/show_bug.cgi?id=282086 rdar://138504987

Reviewed by Tadeu Zagallo.

Unlike RenderPassEncoder, we were not setting the CommandEncoder on
the external textures in the ComputePassEncoder.

* LayoutTests/fast/webgpu/nocrash/fuzz-282086-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-282086.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/ComputePassEncoder.mm:
(WebGPU::setCommandEncoder):

Canonical link: https://commits.webkit.org/285954@main